--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -38,6 +38,20 @@
 
     <!-- TODO #2 - Loop over jobs map to display all job fields -->
 
+
+    <div th:if="${listItems} and ${listItems.size()}">
+
+        <table th:each="items : ${listItems}" class="job-listing">
+            <tr th:each="item, idx : ${items}" th:class="${idx.odd} ? 'odd'">
+                <td th:text="${#strings.capitalizeWords(item.key)}"></td>
+                <td ><a th:href="@{/list/jobs(column=${item.key}, value=${item.value})}" th:text="${#strings.capitalizeWords(item.value)}"></a></td>
+            </tr>
+            <tr class="empty_row"> </tr>
+        </table>
+
+
+    </div>
+
 </div>
 
 </body>
