--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -10,8 +10,17 @@
 
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
-    <!-- TODO #3 - Use the same list display from search.html -->
+    <!-- TODO #3 - COMPLETE - Use the same list display from search.html -->
+    <div th:if="${jobs} and ${jobs.size()}">
 
+        <table th:each="items : ${jobs}" class="job-listing">
+            <tr th:each="item, idx : ${items}" th:class="${idx.odd} ? 'odd'">
+                <td th:text="${#strings.capitalizeWords(item.key)}"></td>
+                <td ><a th:href="@{/list/jobs(column=${item.key}, value=${item.value})}" th:text="${#strings.capitalizeWords(item.value)}"></a></td>
+            </tr>
+            <tr class="empty_row"> </tr>
+        </table>
+    </div>
 </div>
 
 </body>
